--- a/mm-s4apps01/pochange/webapp/view/Main.view.xml
+++ b/mm-s4apps01/pochange/webapp/view/Main.view.xml
@@ -30,15 +30,15 @@
                     <table:columns>
                         <table:Column autoResizable="true" width="6rem" label="{i18n>Status}">
                             <table:template>
-                                <ObjectStatus state="{ path:'local>Status',formatter:'.formatter.formatState' }" icon="sap-icon://status-positive"/>
+                                <ObjectStatus state="{ path:'local>Status',formatter:'.formatter.formatState' }" icon="{ path:'local>Status', formatter:'.formatter.formatStateIcon'}"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="5rem" sortProperty="Status" filterProperty="Status">
+                        <!-- <table:Column width="5rem" sortProperty="Status" filterProperty="Status">
 						    <Label text="{i18n>Type}"/>
 							<table:template>
 								<Text text="{parts:['local>Status'], formatter:'.formatter.formatResult'}"/>
 							</table:template>
-                        </table:Column>   
+                        </table:Column>    -->
                         <table:Column width="15rem" label="{i18n>Message}">
                             <table:template>
                                 <Text text="{local>Message}" wrapping="false"/>
@@ -49,22 +49,22 @@
                                 <Text text="{local>PurchaseOrder}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>PurchaseOrderItem}">
+                        <table:Column width="10rem" label="{i18n>PurchaseOrderItem}">
                             <table:template>
                                 <Text text="{local>PurchaseOrderItem}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>CompanyCode}">
+                        <table:Column width="8rem" label="{i18n>CompanyCode}">
                             <table:template>
                                 <Text text="{local>CompanyCode}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>PurchasingOrganization}">
+                        <table:Column width="8rem" label="{i18n>PurchasingOrganization}">
                             <table:template>
                                 <Text text="{local>PurchasingOrganization}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>PurchasingGroup}">
+                        <table:Column width="10rem" label="{i18n>PurchasingGroup}">
                             <table:template>
                                 <Text text="{local>PurchasingGroup}" wrapping="false"/>
                             </table:template>
@@ -74,17 +74,17 @@
                                 <Text text="{local>Currency}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="4rem" label="{i18n>PurchasingDocumentDeletionCode}">
+                        <table:Column width="6rem" label="{i18n>PurchasingDocumentDeletionCode}">
                             <table:template>
                                 <Text text="{local>PurchasingDocumentDeletionCode}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="4rem" label="{i18n>AccountAssignmentCategory}">
+                        <table:Column width="10rem" label="{i18n>AccountAssignmentCategory}">
                             <table:template>
                                 <Text text="{local>AccountAssignmentCategory}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="4rem" label="{i18n>PurchaseOrderItemCategory}">
+                        <table:Column width="8rem" label="{i18n>PurchaseOrderItemCategory}">
                             <table:template>
                                 <Text text="{local>PurchaseOrderItemCategory}" wrapping="false"/>
                             </table:template>
@@ -99,27 +99,27 @@
                                 <Text text="{local>PurchaseOrderItemText}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>MaterialGroup}">
+                        <table:Column width="8rem" label="{i18n>MaterialGroup}">
                             <table:template>
                                 <Text text="{local>MaterialGroup}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="10rem" label="{i18n>OrderQuantity}">
+                        <table:Column width="10rem" label="{i18n>OrderQuantity}" hAlign="End">
                             <table:template>
                                 <Text text="{local>OrderQuantity}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>ScheduleLineDeliveryDate}">
+                        <table:Column width="8rem" label="{i18n>ScheduleLineDeliveryDate}">
                             <table:template>
                                 <Text text="{ path:'local>ScheduleLineDeliveryDate',formatter:'.formatter.formatDate' }" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="10rem" label="{i18n>NetPriceAmount}">
+                        <table:Column width="10rem" label="{i18n>NetPriceAmount}" hAlign="End">
                             <table:template>
                                 <Text text="{local>NetPriceAmount}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>OrderPriceUnit}">
+                        <table:Column width="8rem" label="{i18n>OrderPriceUnit}">
                             <table:template>
                                 <Text text="{local>OrderPriceUnit}" wrapping="false"/>
                             </table:template>
@@ -134,17 +134,17 @@
                                 <Text text="{local>StorageLocation}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>RequisitionerName}">
+                        <table:Column width="8rem" label="{i18n>RequisitionerName}">
                             <table:template>
                                 <Text text="{local>RequisitionerName}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>RequirementTracking}">
+                        <table:Column width="10rem" label="{i18n>RequirementTracking}">
                             <table:template>
                                 <Text text="{local>RequirementTracking}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="4rem" label="{i18n>IsReturnItem}">
+                        <table:Column width="8rem" label="{i18n>IsReturnItem}">
                             <table:template>
                                 <Text text="{local>IsReturnItem}" wrapping="false"/>
                             </table:template>
@@ -154,66 +154,66 @@
                                 <Text text="{local>InternationalArticleNumber}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="4rem" label="{i18n>DiscountInKindEligibility}">
+                        <table:Column width="8rem" label="{i18n>DiscountInKindEligibility}">
                             <table:template>
                                 <Text text="{local>DiscountInKindEligibility}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="4rem" label="{i18n>TaxCode}">
+                        <table:Column width="8rem" label="{i18n>TaxCode}">
                             <table:template>
                                 <Text text="{local>TaxCode}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="4rem" label="{i18n>IsCompletelyDelivered}">
+                        <table:Column width="8rem" label="{i18n>IsCompletelyDelivered}">
                             <table:template>
                                 <Text text="{local>IsCompletelyDelivered}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="4rem" label="{i18n>PricingDateControl}">
+                        <table:Column width="8rem" label="{i18n>PricingDateControl}">
                             <table:template>
                                 <Text text="{local>PricingDateControl}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>PurgDocPriceDate}">
+                        <table:Column width="8rem" label="{i18n>PurgDocPriceDate}">
                             <table:template>
                                 <Text text="{ path:'local>PurgDocPriceDate',formatter:'.formatter.formatDate' }" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>GLAccount}">
+                        <table:Column width="8rem" label="{i18n>GLAccount}">
                             <table:template>
                                 <Text text="{local>GLAccount}" wrapping="false"/>
                             </table:template>
-                        </table:Column>  
-                        <table:Column width="6rem" label="{i18n>CostCenter}">
+                        </table:Column>
+                        <table:Column width="8rem" label="{i18n>CostCenter}">
                             <table:template>
                                 <Text text="{local>CostCenter}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>MasterFixedAsset}">
+                        <table:Column width="8rem" label="{i18n>MasterFixedAsset}">
                             <table:template>
                                 <Text text="{local>MasterFixedAsset}" wrapping="false"/>
                             </table:template>
-                        </table:Column> 
-                        <table:Column width="6rem" label="{i18n>FixedAsset}">
+                        </table:Column>
+                        <table:Column width="8rem" label="{i18n>FixedAsset}">
                             <table:template>
                                 <Text text="{local>FixedAsset}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>OrderID}">
+                        <table:Column width="8rem" label="{i18n>OrderID}">
                             <table:template>
                                 <Text text="{local>OrderID}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>WBSElementInternalID_2}">
+                        <table:Column width="8rem" label="{i18n>WBSElementInternalID_2}">
                             <table:template>
                                 <Text text="{local>WBSElementInternalID_2}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="6rem" label="{i18n>LongText}">
+                        <table:Column width="10rem" label="{i18n>LongText}">
                             <table:template>
                                 <Text text="{local>LongText}" wrapping="false"/>
                             </table:template>
-                        </table:Column>                                                  
+                        </table:Column>
                     </table:columns>
                 </table:Table>
             </Panel>
