--- a/mm-s4apps01/purinforecordupload/webapp/view/Main.view.xml
+++ b/mm-s4apps01/purinforecordupload/webapp/view/Main.view.xml
@@ -30,15 +30,15 @@
                     <table:columns>
                         <table:Column autoResizable="true" width="6rem" label="{i18n>Status}">
                             <table:template>
-                                <ObjectStatus state="{ path:'local>Status',formatter:'.formatter.formatState' }" icon="sap-icon://status-positive"/>
+                                <ObjectStatus state="{ path:'local>Status',formatter:'.formatter.formatState' }" icon="{ path:'local>Status', formatter:'.formatter.formatStateIcon'}"/>
                             </table:template>
                         </table:Column>
-                        <table:Column width="5rem" sortProperty="Status" filterProperty="Status">
+                        <!-- <table:Column width="5rem" sortProperty="Status" filterProperty="Status">
 						    <Label text="{i18n>Type}"/>
 							<table:template>
 								<Text text="{parts:['local>Status'], formatter:'.formatter.formatResult'}"/>
 							</table:template>
-                        </table:Column>   
+                        </table:Column>    -->
                         <table:Column width="15rem" label="{i18n>Message}">
                             <table:template>
                                 <Text text="{local>Message}" wrapping="false"/>
